--- a/demo1.html
+++ b/demo1.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+<head>
+<meta name="viewport" content="width=device-width">
+</head>
 <body>
   <div id="output"></div>
   <button onclick="text.set('PixelGrid')">PixelGrid</button>
